--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/AntonioGPCDev/react_projects/issues"
   },
-  "homepage": "https://github.com/AntonioGPCDev/react_projects#readme"
+  "homepage": "https://github.com/AntonioGPCDev/react_projects#readme",
+  "devDependencies": {
+    "standard": "^17.1.2"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
+  }
 }
